added books and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet />
+<nav>
+  <a class="button" routerLink="/books"
+     routerLinkActive="activebutton"
+     ariaCurrentWhenActive="page">Books</a> |
+  <a class="button" routerLink="/book"
+     routerLinkActive="activebutton"
+     ariaCurrentWhenActive="page">>First Book</a>
+</nav>
+<router-outlet/>
