added finding books by id with router

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -2,3 +2,5 @@
 <div class="book-id"><span>id: </span>{{book.id}}</div>
 <div class="book-name"><span>name: </span>{{book.name}}</div>
 <div class="book-status"><span>status: </span>{{book.status}}</div>
+
+<button type="button" (click)="goBack()">go back</button>
