first version of a working app without search is live

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,6 +1,8 @@
-<h2>{{book.name}} Details</h2>
-<div class="book-id"><span>id: </span>{{book.id}}</div>
-<div class="book-name"><span>name: </span>{{book.name}}</div>
-<div class="book-status"><span>status: </span>{{book.status}}</div>
+<div *ngIf="book">
+  <h2>{{ book.name }} Details</h2>
+  <div class="book-id"><span>id: </span>{{ book.id }}</div>
+  <div class="book-name"><span>name: </span>{{ book.name }}</div>
+  <div class="book-status"><span>status: </span>{{ book.status }}</div>
 
-<button type="button" (click)="goBack()">go back</button>
+  <button type="button" (click)="goBack()">go back</button>
+</div>
