--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,9 +1,8 @@
 <h2>My Books</h2>
 <ul class="book-items">
   <li *ngFor="let book of books" class="book-item">
-    <button type="button">
-      <span class="badge">{{book.id}}</span>
-      <span class="name">{{book.name}}</span>
-    </button>
+    <a routerLink="/book/{{book.id}}">
+      <span class="badge">{{book.id}}</span> {{book.name}}
+    </a>
   </li>
 </ul>
