--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <nav>
   <a class="button" routerLink="/books"
      routerLinkActive="activebutton"
-     ariaCurrentWhenActive="page">Books</a> |
-  <a class="button" routerLink="/book"
-     routerLinkActive="activebutton"
-     ariaCurrentWhenActive="page">>First Book</a>
+     ariaCurrentWhenActive="page">Books</a>
 </nav>
 <router-outlet/>
