removed in memory web data replaced with http interceptor

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,10 +1,10 @@
 <h2>My Books</h2>
 
 <label for="search-box">Book Search</label>
-<input #searchBox id="search-box" (input)="search(searchBox.value)" />
+<input #searchBox id="search-box" (input)="search(searchBox.value)"/>
 <ul class="books">
-  <li *ngFor="let book of books$ | async" class="book-item">
-    <a routerLink="/book/{{book.id}}">
+  <li *ngFor="let book of (books$ | async)?.content" class="book-item">
+    <a routerLink="/books/{{book.id}}">
       <span class="badge">{{ book.id }}</span> {{ book.name }}
     </a>
   </li>
