--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,13 +1,14 @@
-<div *ngIf="book">
-  <h2>{{ book.name }} Details</h2>
-  <h4>{{ book.fullTitle}}</h4>
-  <h5>{{book.description}}</h5>
-  <div class="book-isbn"><span>isbn: </span>{{ book.isbn }}</div>
-  <div class="book-status"><span>status: </span>{{ book.status }}</div>
-  <div class="book-cover"><span>cover: </span>{{book.cover}}</div>
-  <div class="book-publishYear"><span>publishYear: </span>{{book.publishYear}}</div>
-  <div class="book-pages"><span>pages: </span>{{book.pages}}</div>
-  <div class="book-barcode"><span>barcode: </span>{{book.barcode}}</div>
-
-  <button type="button" (click)="goBack()">go back</button>
-</div>
+@if (book) {
+  <div>
+    <h2>{{ book.name }} Details</h2>
+    <h4>{{ book.fullTitle}}</h4>
+    <h5>{{book.description}}</h5>
+    <div class="book-isbn"><span>isbn: </span>{{ book.isbn }}</div>
+    <div class="book-status"><span>status: </span>{{ book.status }}</div>
+    <div class="book-cover"><span>cover: </span>{{book.cover}}</div>
+    <div class="book-publishYear"><span>publishYear: </span>{{book.publishYear}}</div>
+    <div class="book-pages"><span>pages: </span>{{book.pages}}</div>
+    <div class="book-barcode"><span>barcode: </span>{{book.barcode}}</div>
+    <button type="button" (click)="goBack()">go back</button>
+  </div>
+}
