--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -3,9 +3,11 @@
 <label for="search-box">Book Search</label>
 <input #searchBox id="search-box" (input)="search(searchBox.value)"/>
 <ul class="books">
-  <li *ngFor="let book of (books$ | async)?.content" class="book-item">
-    <a routerLink="/books/{{book.id}}">
-      <span class="badge">{{ book.id }}</span> {{ book.name }}
-    </a>
-  </li>
+  @for (book of (books$ | async)?.content; track book) {
+    <li class="book-item">
+      <a routerLink="/books/{{book.id}}">
+        <span class="badge">{{ book.id }}</span> {{ book.name }}
+      </a>
+    </li>
+  }
 </ul>
