--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+<h1>Page not found</h1>
+<p role="status">The page you’re looking for doesn’t exist.</p>
+<a [routerLink]="['/books']" class="btn">Go to Books</a>
